gift summary gui draft
git-svn-id: svn://svn.orangeleap.com/tangerine/tangerine/trunk@9090 0f581344-5646-3a48-8ded-616bfea576c6